 This saves some confusing explaining to new users about the difference between 
 relative and absolute paths.
-Mnemosyne now saves after each reviewed card.
-'Activate cards' is completely revamped and is much more flexible. Also, sets of
 active cards can be now be saved for easier later recall.
-Avoid showing the same card twice in a row.
-Added option "learn new related cards in same session"
-Varn if the user memorises over 15 new cards in a session.
-Hooked up the machinery to allow embedding video in cards, but on my machine
 only the sound plays. Hopefully, later versions of Qt will fix this.
-Added option to control whether media (sound/video) gets started automatically
 when displaying a card.
-Added option to display a media control (play/pause/slider)
-improved backup scheme. Users can now restore from backups using the 
 File - Open menu, as opposed to first decompressing a file outside of Mnemosyne.
-The learing history is now stored in an SQL database, allowing to calculate
 more statistics
-Graphical statistics (Mike Appleby)
-The plugin mechanism encompasses also the statistics, configuration and card
 activation screens.
-Cards which are failed during learning ahead are now periodically brought
 back in the learning process.
-Added cramming scheduler plugin, which goes through your cards in random
 order and does not affect the normal scheduler data. It is visually
 distinguished from the regular scheduler by having only two grade buttons
 (Right and Wrong)
-Windows Mobile client
-Maemo client
-When leaving the program open overnight, the display will update at the
 roll over point.
-Intelligent sorting of categories containing numbers, so that you no longer
 have to call a category 'Lesson 01' instead of 'Lesson '1 to get the correct
 ordering (Mike Appleby).
-Uses Phonon as sound backend instead of PyGame (Louis Cyphre).


-Croatian translation by Ilija Pavlic

	
Mnemosyne 1.2.2 : 2010-01-29
	